--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="/css/style.css" rel="stylesheet">
+    <!--link href="/css/style.css" rel="stylesheet"-->
 </head>
 <body>
     <!-- Navbar -->
@@ -72,8 +72,8 @@
     </footer>
 
     <!-- Bootstrap JS -->
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <!--script src="/js/bootstrap.bundle.min.js"></script-->
     <!-- Custom JS -->
-    <script src="/js/script.js"></script>
+    <!--script src="/js/script.js"></script-->
 </body>
 </html> 
